# kondor

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.json  babel.config.js  drizzle.config.ts  eas.json  global.d.ts  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy-pwa.yml  release.yml
__tests__/: i18n.test.ts
__tests__/db/: repositories.test.ts
__tests__/features/: cards.test.ts  cloze.test.ts  import-cards.test.ts  import-export.test.ts  statistics.test.ts  study.test.ts  sync.test.ts
__tests__/helpers/: react-native-mock.ts  test-db.ts
__tests__/services/: srs.test.ts
docs/: ARCHITECTURE.md  ROADMAP.md  WEB_HOSTING.md
docs/adr/: 0001-core-tech-stack.md  0002-sync-architecture.md  0003-universal-offline-self-hosted-sync.md
public/: manifest.json  sw.js
scripts/: copy-wasm.js
server/: .env.example  README.md  WINDOWS_SERVER.md  jest.config.js  kondor-server.db-shm  kondor-server.db-wal  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
server/__tests__/: app.test.ts
server/src/: app.ts  auth.ts  db.ts  index.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: +html.tsx  _layout.tsx  index.tsx  onboarding.tsx  privacy.tsx  settings.tsx  stats.tsx
src/components/: card-content.tsx  empty-state.tsx  error-boundary.tsx  screen.tsx
src/db/: client.ts  index.ts  migrate.ts  provider.tsx  seed.ts
src/hooks/: use-async-data.ts  (+1 more)
(+86 files in other folders)
